fix: layout grid for rooms, prevent parent overflow

--- a/frontend/parodent-front/src/components/navBar/NavBar.css
+++ b/frontend/parodent-front/src/components/navBar/NavBar.css
@@ -2,7 +2,7 @@
 .navbarBody{
     display: flex;
     height: 8vh;
-    width: 88%;
+    width: 90%;
     position: absolute;
     top: 0;
     right: 0;
